# sybim

./: .bazelrc  .env.sample  .gitignore  .gitmodules  README.md  WORKSPACE  docker-compose.dev.yml  docker-compose.yml
bazel/: bazel.rc  expand_template.bzl
gui/: .dockerignore  Dockerfile  README.md  create.html  download_third_party.sh  faq.html  generate_everything.py  index.html  join.html  nginx.conf.template  room.html
gui/src/: base.html  create.html.in  index.html.in  join.html.in  robots.txt  room.html.in
gui/src/css/: general.css  main.css  player.css
gui/src/js/: player.js  player_html5.js  player_vimeo.js  player_youtube.js  socket.js  util.js
gui/static/: base.js  main.css  site.webmanifest
server/: .dockerignore  BUILD.bazel  CMakeLists.txt  Dockerfile  README.md  logger.h  main.cpp  util.h
